# cahoot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cahoot/: __init__.py  __main__.py  adapter.py  admission.py  banner.py  bus.py  cahoot_join.py  commands.py  config.py  discovery.py  envelope.py  invites.py  listener.py  local_detect.py  onboarding.py  runtime.py  store.py
cahoot/adapters/: __init__.py  _acp_base.py  hermes.py  openclaw.py  remote.py  synthetic.py
cahoot/ui/: __init__.py  app.py  command.py  feed.py  inspector.py  roster.py
docs/: ADAPTERS.md  AGENT_GUIDE.md  ARCHITECTURE.md  ONBOARDING.md  OPERATIONS.md
docs/examples/: cahoot.toml
scripts/: cahoot-launch.sh  generate_app_icon.py  generate_banner_svg.py  install-agent.sh  install-server.sh  uninstall.sh
scripts/Cahoot.app/Contents/: Info.plist
scripts/Cahoot.app/Contents/MacOS/: run
scripts/Cahoot.app/Contents/Resources/: icon.icns
tests/: test_acp_adapter.py  test_adapter.py  test_admission.py  test_banner.py  test_bus.py  test_commands.py  test_config.py  test_discovery.py  test_envelope.py  test_invites.py  test_journeys.py  test_listener.py  test_local_detect.py  test_onboarding.py  test_runtime.py  test_store.py  test_ui.py
